--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
-  <audio autoplay style="display: none;">
-    <source src="music.mp3">
-  </audio>  
+  <audio autoplay>
+    <source src="./audio/song.ogg" type="audio/ogg" />
+    <source src="./audio/song.mp3" type="audio/mpeg" />
+  </audio>
   <div class="night"></div>
   <div class="flowers">
     <div class="flower flower--1">
